--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -71,6 +71,6 @@
             <hr>
             <hr>
         </footer>
-        <script src="../static\main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>  
